// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My tests for Messages Component renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`My tests for Messages Component renders the UI with no unread messages 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badge"
  >
    4
  </div>
</div>
`;

exports[`renders the UI with no unread 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the UI with no unread messages 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;

exports[`renders the message unread 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
